2009-07-07  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlFormatterDeserializer.cs, SerializationMap.cs : IXmlSerializable
	  were not deserialized correctly as it has mismatch on wrapper
	  element. This fixes PeerNodeAddress.EndpointAddress deserialization.

2009-06-26  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlFormatterDeserializer.cs : verifyObjectName rather blocked
	  correct names provided as the root names.

2009-06-01  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlFormatterSerializer.cs, KnownTypeCollection.cs : collection
	  types does not emit xsi:type when the actual type is different
	  from the nominal serilaization type. To achieve this, introduced
	  the idea of the actual serialization type.

2009-05-28  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs : for default / shared type map, members are
	  serialized in alphabetical order.

2009-05-28  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs : generic interface search has to be more
	  complicated. Give kind error message on setting deserialized value.

2009-05-28  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs: collection interface cannot be instantiated,
	  so create List<T> (generic) or ArrayList (non-generic) instead.

2009-05-25  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs, XmlFormatterSerializer.cs :
	  collection types should not output xsi:type e.g. IList<T> should
	  not exposed xsi:type as xsi:type=List`1.

2009-05-18  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs, XmlFormatterDeserializer.cs,
	  KnownTypeCollection.cs : Support for array of some primitive types
	  in the deserializer was missing, which resulted in peer resolver
	  RegisterInfo deserialization failure.

2009-05-18  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlFormatterDeserializer.cs : remove type lookup optimization
	  (since .NET 3.5 introduced system types with DC) and fix
	  serialization of system types (ISerializable types were not