@@ -1,3 +1,8 @@
+2009-07-21  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* DataContractSerializer.cs : it does not write dictionary string
+	  when it was not created with it.
+
 2009-07-07  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* XmlFormatterDeserializer.cs, SerializationMap.cs : IXmlSerializable
